@@ -1995,7 +1995,8 @@ Mark Callaghan <mdcallag at gmail dot com>
 Hanson Lu <suf_lu at yahoo dot com>
 Gavin Yu <songtaoyu at lucent dot com>
 Srikanth Gopal <sriki_666 at yahoo dot com>
-<likemartinma at 163 dot com>
+Martin Ma <likemartinma at 163 dot com>
+Alvin Msg <alvin dot msg at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
